--- a/charts/helm-example/values.yaml
+++ b/charts/helm-example/values.yaml
@@ -6,8 +6,8 @@ replicaCount: 1
 
 image:
   pullPolicy: IfNotPresent
-  repository: 145664717845.dkr.ecr.ap-south-1.amazonaws.com/gitops-argocd
-  version: main-3dfdb75
+  repository: 048824573157.dkr.ecr.us-east-2.amazonaws.com/gitops-argocd
+  version: main-ddb23eb
 
 imagePullSecrets: []
 nameOverride: ""
